--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "concurrently": "^7.0.0",
+    "firebase": "^9.6.9",
     "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -19,7 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"json-server --watch ./db.json --port 3001\" \"react-scripts start\"",
+    "start": "concurrently \"react-scripts start\" \"json-server --watch ./db.json --port 3001\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
