--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^7.0.0",
     "firebase": "^9.6.9",
     "gh-pages": "^3.2.3",
+    "json-server": "^0.17.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
